2014-09-29  James Clarke  <jrtc27@jrtc27.com>
	    Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR target/61407
	* config/darwin-c.c (version_as_macro): Added extra 0 for OS X 10.10
	and above.
	* config/darwin-driver.c (darwin_find_version_from_kernel): Removed
	kernel version check to avoid incrementing it after every major OS X
	release.
	(darwin_default_min_version): Avoid static memory buffer.

2014-09-29  Charles Baylis  <charles.baylis@linaro.org>

	Backport from mainline r212303
	PR target/49423
	* config/arm/arm-protos.h (arm_legitimate_address_p,
	arm_is_constant_pool_ref): Add prototypes.
	* config/arm/arm.c (arm_legitimate_address_p): Remove static.
	(arm_is_constant_pool_ref) New function.
	* config/arm/arm.md (unaligned_loadhis, arm_zero_extendhisi2_v6,
	arm_zero_extendqisi2_v6): Use Uh constraint for memory operand.
	(arm_extendhisi2, arm_extendhisi2_v6): Use Uh constraint for memory
	operand and remove pool_range and neg_pool_range attributes.
	(arm_extendqihi_insn, arm_extendqisi, arm_extendqisi_v6): Remove
	pool_range and neg_pool_range attributes.
	* config/arm/constraints.md (Uh): New constraint. (Uq): Don't allow
	constant pool references.

2014-09-29  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/63247
	* omp-low.c (lower_omp_target): For OMP_CLAUSE_MAP_POINTER
	of ARRAY_TYPE, if not OMP_CLAUSE_MAP_ZERO_BIAS_ARRAY_SECTION
	use the alignment of avar rather than ovar.

2014-09-28  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_output_function_epilogue): Only update
	last_address when a nonnote insn is found.

2014-09-25  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2014-09-25  Nick Clifton  <nickc@redhat.com>
	2014-09-25  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/62218
	* config/sh/sync.md (atomic_fetch_nand<mode>_soft_imask,
	atomic_test_and_set_soft_imask): Fix typo in instruction sequence.

2014-09-25  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	Backport from mainline r215559